--- a/src/app/features/plan-detail/components/plan-card-detail/plan-card-detail.component.html
+++ b/src/app/features/plan-detail/components/plan-card-detail/plan-card-detail.component.html
@@ -34,7 +34,6 @@
   </mat-card-header>
 
   <mat-card-content class="mt-4">
-    <!-- Información adicional si está completado -->
     @if (detail.leido && detail.fecha_completado) {
     <div class="completed-info mb-4 p-3  rounded-lg">
       <div class="text-sm font-medium text-green-800 mb-2">
@@ -96,7 +95,6 @@
     <div class="px-2 w-full">
       <h4 class="text-sm font-medium mb-3">Información de lectura</h4>
 
-      <!-- Tiempo real -->
       <mat-form-field appearance="outline" class="w-full mb-3">
         <mat-label>Tiempo real (minutos)</mat-label>
         <input
@@ -116,7 +114,7 @@
           <input
             matSliderThumb
             [value]="dificultad()"
-            (input)="dificultad.set($any($event.target).value)"
+            (input)="dificultad.set(+$any($event.target).value)"
           />
         </mat-slider>
         <div class="text-xs text-gray-600 mt-1">
