--- a/src/app/features/plans/components/plan-list/plan-list.component.html
+++ b/src/app/features/plans/components/plan-list/plan-list.component.html
@@ -73,6 +73,7 @@
         (viewPlan)="onViewPlan($event)"
         (editPlan)="onEditPlan($event)"
         (completePlan)="onCompletePlan($event)"
+        (deletePlan)="onDeletePlan($event)"
       />
     </mat-expansion-panel>
     }
