--- a/src/app/features/plans/pages/home-plans/home-plans.component.html
+++ b/src/app/features/plans/pages/home-plans/home-plans.component.html
@@ -5,6 +5,7 @@
   (planView)="onPlanView($event)"
   (planEdit)="onPlanEdit($event)"
   (planComplete)="onPlanComplete($event)"
+  (planDelete)="onPlanDelete($event)"
   (refreshPlans)="onRefreshPlans()"
 />
 <app-main-button/>
