--- a/src/app/features/plan-detail/components/plan-card-detail-list/plan-card-detail-list.component.html
+++ b/src/app/features/plan-detail/components/plan-card-detail-list/plan-card-detail-list.component.html
@@ -59,10 +59,12 @@
     </mat-card>
 
     <!-- Accordion de días -->
-    <mat-accordion class="days-accordion" multi>
+    <mat-accordion class="days-accordion">
       @for (day of getPlanDays(); track day) {
       <mat-expansion-panel
-
+      [expanded]="isDayExpanded(day)"
+      (opened)="togglePanel(day, true)"
+      (closed)="togglePanel(day, false)"
       class="day-panel" >
         <mat-expansion-panel-header class="!min-h-20">
           <mat-panel-title>
