modificacion edit plan

--- a/src/app/features/plan-detail/components/plan-card-detail-list/plan-card-detail-list.component.html
+++ b/src/app/features/plan-detail/components/plan-card-detail-list/plan-card-detail-list.component.html
@@ -44,7 +44,7 @@
           {{ plan.descripcion }}
         </p>
       </mat-card-content>
-      <mat-card-footer class="mx-4 mt-4">
+      <mat-card-footer class="mx-4 mt-4 mb-4">
         <div class="flex justify-between items-center">
           <mat-progress-bar
             mode="determinate"
