--- a/src/app/features/plans/components/plan-list/plan-list.component.html
+++ b/src/app/features/plans/components/plan-list/plan-list.component.html
@@ -42,9 +42,9 @@
     >
       <mat-expansion-panel-header class="!min-h-20">
         <mat-panel-title>
-          <span class="progress-percentage"
+          <!-- <span class="progress-percentage"
             >{{ getPlanProgress(plan) }}%&nbsp;</span
-          >
+          > -->
           <mat-progress-bar
             mode="determinate"
             [value]="getPlanProgress(plan)"
