--- a/src/app/features/plan-detail/components/plan-card-detail/plan-card-detail.component.html
+++ b/src/app/features/plan-detail/components/plan-card-detail/plan-card-detail.component.html
@@ -3,7 +3,7 @@
   <mat-card-header>
     <div class="flex w-full justify-between items-center">
       <div class="flex items-center gap-3">
-        <div mat-card-avatar class="example-header-image"></div>
+        <!-- <div mat-card-avatar class="example-header-image"></div> -->
         <div>
           <mat-card-title>
             {{ detail.capitulo.titulo_capitulo }}
