--- a/src/app/features/plans/pages/home-plans/home-plans.component.html
+++ b/src/app/features/plans/pages/home-plans/home-plans.component.html
@@ -1,4 +1,4 @@
-<div class="mx-2">
+<div class="mx-2 home-plan-detail-container">
   <app-plan-list
     [plans]="plans()"
     [isLoading]="isLoading()"
